Externalization of PS3/Xbox playback profiles, it's now possible to create profiles for any media renderer (Popcorn Hour already included)
Handling of UTF8 and UTF16 encoding, and case insensitive external subtitles
CUE playlist support
Updated tsMuxeR binaries (better H264 camcorders support)
Windows: Launcher now detects Java 64 bits if installed
OSX: Native look, now looks like a Mac application
OSX: Updated mencoder/mplayer/ffmpeg builds, support for FriBidi
OSX: Updated build script to make a bundle or dmg automatically (thanks to Josh Klun)
New translations: Slovenian (thanks to Rob Wall)

- Fixes

Media library major speed and size improvements (you may have to reset the library)
Improved fix for the stopped videos issue
Better support for mkvs with NTSC video track
Fix spaces usage in the audio/subtitles configurations

v1.10.5

- Fixes:

Regression in FLAC playback
Fixed subtitles font detection on Windows
Flaw in the transcode/remux buffer, in some cases, the video stopped after a few minutes
Cache bug when streaming web medias
Duplicate items issue on Linux
Upnp alive message sent sooner at the start of the server

v1.10

- Changes / Features : Windows/Linux

DTS / DTS-HD core audio tracks are now streamable without reencoding (DVD ISOs not supported yet)
New Option: unification of Mencoder/tsMuxer engines, including:
. Automatic choice between H264 muxing or transcoding, based on AVC Level 4.1 compatibility and subtitles configuration
. Remux on the fly any H264 content from MOV, MP4, and AVI containers (ex: Apple HD Trailers)
. This option is enabled by default and can be disabled via the #Video Settings# virtual menu if anything goes wrong
TS/M2TS support improvement
2 channels downmixing support with PCM conversion

- Changes / Features : All Platforms

XBox 360 unofficial support (Pictures/Music/Videos : WMV8/WMA2 transcoding)
Mencoder archive handling (no seeking support)