@@ -3,7 +3,7 @@
 
 RendererName=Popcorn Hour
 RendererIcon=pch.png
-UserAgentSearch=SYABAS
+UserAgentSearch=SYABAS|SMP8634|Firefox/0\.8\.0
 Video=true
 Audio=true
 Image=true
